parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> statement program
Rule 2     program -> statement
Rule 3     statement -> var_declaration
Rule 4     statement -> const_declaration
Rule 5     statement -> if_statement
Rule 6     statement -> while_statement
Rule 7     statement -> input_statement
Rule 8     statement -> output_statement
Rule 9     statement -> function_statement
Rule 10    var_declaration -> LET ID OP_TYPE_ASSIGN type OP_VALUE_ASSIGN expression SEMI_COLON
Rule 11    const_declaration -> CONST ID OP_TYPE_ASSIGN type OP_VALUE_ASSIGN expression SEMI_COLON
Rule 12    if_statement -> IF LPAREN expression RPAREN CURLYLEFT program CURLYRIGHT
Rule 13    if_statement -> IF LPAREN expression RPAREN CURLYLEFT program CURLYRIGHT ELSE CURLYLEFT program CURLYRIGHT
Rule 14    while_statement -> WHILE LPAREN expression RPAREN CURLYLEFT program CURLYRIGHT
Rule 15    input_statement -> READ LPAREN RPAREN SEMI_COLON
Rule 16    output_statement -> PRINT LPAREN expression RPAREN SEMI_COLON
Rule 17    function_statement -> FUNCTION ID LPAREN RPAREN CURLYLEFT statement RETURN expression SEMI_COLON CURLYRIGHT
Rule 18    type -> NUMBER
Rule 19    type -> BOOL
Rule 20    type -> STRING
Rule 21    expression -> simple_expression
Rule 22    expression -> OP_MINUS simple_expression
Rule 23    expression -> logic_expression
Rule 24    simple_expression -> term OP_PLUS simple_expression
Rule 25    simple_expression -> term OP_MINUS simple_expression
Rule 26    simple_expression -> term
Rule 27    logic_expression -> simple_expression logical_op simple_expression
Rule 28    logic_expression -> OP_NOT logic_expression
Rule 29    term -> factor OP_MULT term
Rule 30    term -> factor OP_DIVIDE term
Rule 31    term -> factor OP_MOD term
Rule 32    term -> factor
Rule 33    factor -> lit_value
Rule 34    factor -> LPAREN expression RPAREN
Rule 35    factor -> ID
Rule 36    logical_op -> OP_AND
Rule 37    logical_op -> OP_OR
Rule 38    logical_op -> OP_MORE_OR_EQUAL
Rule 39    logical_op -> OP_LESS_OR_EQUAL
Rule 40    logical_op -> OP_MORE_THAN
Rule 41    logical_op -> OP_LESS_THAN
Rule 42    logical_op -> OP_NOT_EQUALS
Rule 43    logical_op -> OP_EQUALS
Rule 44    lit_value -> TRUE
Rule 45    lit_value -> FALSE
Rule 46    lit_value -> LIT_NUMBER
Rule 47    lit_value -> LIT_STRING

Terminals, with rules where they appear

BOOL                 : 19
CONST                : 11
CURLYLEFT            : 12 13 13 14 17
CURLYRIGHT           : 12 13 13 14 17
ELSE                 : 13
FALSE                : 45
FUNCTION             : 17
ID                   : 10 11 17 35
IF                   : 12 13
LET                  : 10
LIT_NUMBER           : 46
LIT_STRING           : 47
LPAREN               : 12 13 14 15 16 17 34
NUMBER               : 18
OP_AND               : 36
OP_DIVIDE            : 30
OP_EQUALS            : 43
OP_LESS_OR_EQUAL     : 39
OP_LESS_THAN         : 41
OP_MINUS             : 22 25
OP_MOD               : 31
OP_MORE_OR_EQUAL     : 38
OP_MORE_THAN         : 40
OP_MULT              : 29
OP_NOT               : 28
OP_NOT_EQUALS        : 42
OP_OR                : 37
OP_PLUS              : 24
OP_TYPE_ASSIGN       : 10 11
OP_VALUE_ASSIGN      : 10 11
PRINT                : 16
READ                 : 15
RETURN               : 17
RPAREN               : 12 13 14 15 16 17 34
SEMI_COLON           : 10 11 15 16 17
STRING               : 20
TRUE                 : 44
WHILE                : 14
error                : 

Nonterminals, with rules where they appear

const_declaration    : 4
expression           : 10 11 12 13 14 16 17 34
factor               : 29 30 31 32
function_statement   : 9
if_statement         : 5
input_statement      : 7
lit_value            : 33
logic_expression     : 23 28
logical_op           : 27
output_statement     : 8
program              : 1 12 13 13 14 0
simple_expression    : 21 22 24 25 27 27
statement            : 1 2 17
term                 : 24 25 26 29 30 31
type                 : 10 11
var_declaration      : 3
while_statement      : 6

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . statement program
    (2) program -> . statement
    (3) statement -> . var_declaration
    (4) statement -> . const_declaration
    (5) statement -> . if_statement
    (6) statement -> . while_statement
    (7) statement -> . input_statement
    (8) statement -> . output_statement
    (9) statement -> . function_statement
    (10) var_declaration -> . LET ID OP_TYPE_ASSIGN type OP_VALUE_ASSIGN expression SEMI_COLON
    (11) const_declaration -> . CONST ID OP_TYPE_ASSIGN type OP_VALUE_ASSIGN expression SEMI_COLON
    (12) if_statement -> . IF LPAREN expression RPAREN CURLYLEFT program CURLYRIGHT
    (13) if_statement -> . IF LPAREN expression RPAREN CURLYLEFT program CURLYRIGHT ELSE CURLYLEFT program CURLYRIGHT
    (14) while_statement -> . WHILE LPAREN expression RPAREN CURLYLEFT program CURLYRIGHT
    (15) input_statement -> . READ LPAREN RPAREN SEMI_COLON
    (16) output_statement -> . PRINT LPAREN expression RPAREN SEMI_COLON
    (17) function_statement -> . FUNCTION ID LPAREN RPAREN CURLYLEFT statement RETURN expression SEMI_COLON CURLYRIGHT

    LET             shift and go to state 10
    CONST           shift and go to state 11
    IF              shift and go to state 12
    WHILE           shift and go to state 13
    READ            shift and go to state 14
    PRINT           shift and go to state 15
    FUNCTION        shift and go to state 16

    program                        shift and go to state 1
    statement                      shift and go to state 2
    var_declaration                shift and go to state 3
    const_declaration              shift and go to state 4
    if_statement                   shift and go to state 5
    while_statement                shift and go to state 6
    input_statement                shift and go to state 7
    output_statement               shift and go to state 8
    function_statement             shift and go to state 9

state 1

    (0) S' -> program .



state 2

    (1) program -> statement . program
    (2) program -> statement .
    (1) program -> . statement program
    (2) program -> . statement
    (3) statement -> . var_declaration
    (4) statement -> . const_declaration
    (5) statement -> . if_statement
    (6) statement -> . while_statement
    (7) statement -> . input_statement
    (8) statement -> . output_statement
    (9) statement -> . function_statement
    (10) var_declaration -> . LET ID OP_TYPE_ASSIGN type OP_VALUE_ASSIGN expression SEMI_COLON
    (11) const_declaration -> . CONST ID OP_TYPE_ASSIGN type OP_VALUE_ASSIGN expression SEMI_COLON
    (12) if_statement -> . IF LPAREN expression RPAREN CURLYLEFT program CURLYRIGHT
    (13) if_statement -> . IF LPAREN expression RPAREN CURLYLEFT program CURLYRIGHT ELSE CURLYLEFT program CURLYRIGHT
    (14) while_statement -> . WHILE LPAREN expression RPAREN CURLYLEFT program CURLYRIGHT
    (15) input_statement -> . READ LPAREN RPAREN SEMI_COLON
    (16) output_statement -> . PRINT LPAREN expression RPAREN SEMI_COLON
    (17) function_statement -> . FUNCTION ID LPAREN RPAREN CURLYLEFT statement RETURN expression SEMI_COLON CURLYRIGHT

    $end            reduce using rule 2 (program -> statement .)
    CURLYRIGHT      reduce using rule 2 (program -> statement .)
    LET             shift and go to state 10
    CONST           shift and go to state 11
    IF              shift and go to state 12
    WHILE           shift and go to state 13
    READ            shift and go to state 14
    PRINT           shift and go to state 15
    FUNCTION        shift and go to state 16

    statement                      shift and go to state 2
    program                        shift and go to state 17
    var_declaration                shift and go to state 3
    const_declaration              shift and go to state 4
    if_statement                   shift and go to state 5
    while_statement                shift and go to state 6
    input_statement                shift and go to state 7
    output_statement               shift and go to state 8
    function_statement             shift and go to state 9

state 3

    (3) statement -> var_declaration .

    LET             reduce using rule 3 (statement -> var_declaration .)
    CONST           reduce using rule 3 (statement -> var_declaration .)
    IF              reduce using rule 3 (statement -> var_declaration .)
    WHILE           reduce using rule 3 (statement -> var_declaration .)
    READ            reduce using rule 3 (statement -> var_declaration .)
    PRINT           reduce using rule 3 (statement -> var_declaration .)
    FUNCTION        reduce using rule 3 (statement -> var_declaration .)
    $end            reduce using rule 3 (statement -> var_declaration .)
    CURLYRIGHT      reduce using rule 3 (statement -> var_declaration .)
    RETURN          reduce using rule 3 (statement -> var_declaration .)


state 4

    (4) statement -> const_declaration .

    LET             reduce using rule 4 (statement -> const_declaration .)
    CONST           reduce using rule 4 (statement -> const_declaration .)
    IF              reduce using rule 4 (statement -> const_declaration .)
    WHILE           reduce using rule 4 (statement -> const_declaration .)
    READ            reduce using rule 4 (statement -> const_declaration .)
    PRINT           reduce using rule 4 (statement -> const_declaration .)
    FUNCTION        reduce using rule 4 (statement -> const_declaration .)
    $end            reduce using rule 4 (statement -> const_declaration .)
    CURLYRIGHT      reduce using rule 4 (statement -> const_declaration .)
    RETURN          reduce using rule 4 (statement -> const_declaration .)


state 5

    (5) statement -> if_statement .

    LET             reduce using rule 5 (statement -> if_statement .)
    CONST           reduce using rule 5 (statement -> if_statement .)
    IF              reduce using rule 5 (statement -> if_statement .)
    WHILE           reduce using rule 5 (statement -> if_statement .)
    READ            reduce using rule 5 (statement -> if_statement .)
    PRINT           reduce using rule 5 (statement -> if_statement .)
    FUNCTION        reduce using rule 5 (statement -> if_statement .)
    $end            reduce using rule 5 (statement -> if_statement .)
    CURLYRIGHT      reduce using rule 5 (statement -> if_statement .)
    RETURN          reduce using rule 5 (statement -> if_statement .)


state 6

    (6) statement -> while_statement .

    LET             reduce using rule 6 (statement -> while_statement .)
    CONST           reduce using rule 6 (statement -> while_statement .)
    IF              reduce using rule 6 (statement -> while_statement .)
    WHILE           reduce using rule 6 (statement -> while_statement .)
    READ            reduce using rule 6 (statement -> while_statement .)
    PRINT           reduce using rule 6 (statement -> while_statement .)
    FUNCTION        reduce using rule 6 (statement -> while_statement .)
    $end            reduce using rule 6 (statement -> while_statement .)
    CURLYRIGHT      reduce using rule 6 (statement -> while_statement .)
    RETURN          reduce using rule 6 (statement -> while_statement .)


state 7

    (7) statement -> input_statement .

    LET             reduce using rule 7 (statement -> input_statement .)
    CONST           reduce using rule 7 (statement -> input_statement .)
    IF              reduce using rule 7 (statement -> input_statement .)
    WHILE           reduce using rule 7 (statement -> input_statement .)
    READ            reduce using rule 7 (statement -> input_statement .)
    PRINT           reduce using rule 7 (statement -> input_statement .)
    FUNCTION        reduce using rule 7 (statement -> input_statement .)
    $end            reduce using rule 7 (statement -> input_statement .)
    CURLYRIGHT      reduce using rule 7 (statement -> input_statement .)
    RETURN          reduce using rule 7 (statement -> input_statement .)


state 8

    (8) statement -> output_statement .

    LET             reduce using rule 8 (statement -> output_statement .)
    CONST           reduce using rule 8 (statement -> output_statement .)
    IF              reduce using rule 8 (statement -> output_statement .)
    WHILE           reduce using rule 8 (statement -> output_statement .)
    READ            reduce using rule 8 (statement -> output_statement .)
    PRINT           reduce using rule 8 (statement -> output_statement .)
    FUNCTION        reduce using rule 8 (statement -> output_statement .)
    $end            reduce using rule 8 (statement -> output_statement .)
    CURLYRIGHT      reduce using rule 8 (statement -> output_statement .)
    RETURN          reduce using rule 8 (statement -> output_statement .)


state 9

    (9) statement -> function_statement .

    LET             reduce using rule 9 (statement -> function_statement .)
    CONST           reduce using rule 9 (statement -> function_statement .)
    IF              reduce using rule 9 (statement -> function_statement .)
    WHILE           reduce using rule 9 (statement -> function_statement .)
    READ            reduce using rule 9 (statement -> function_statement .)
    PRINT           reduce using rule 9 (statement -> function_statement .)
    FUNCTION        reduce using rule 9 (statement -> function_statement .)
    $end            reduce using rule 9 (statement -> function_statement .)
    CURLYRIGHT      reduce using rule 9 (statement -> function_statement .)
    RETURN          reduce using rule 9 (statement -> function_statement .)


state 10

    (10) var_declaration -> LET . ID OP_TYPE_ASSIGN type OP_VALUE_ASSIGN expression SEMI_COLON

    ID              shift and go to state 18


state 11

    (11) const_declaration -> CONST . ID OP_TYPE_ASSIGN type OP_VALUE_ASSIGN expression SEMI_COLON

    ID              shift and go to state 19


state 12

    (12) if_statement -> IF . LPAREN expression RPAREN CURLYLEFT program CURLYRIGHT
    (13) if_statement -> IF . LPAREN expression RPAREN CURLYLEFT program CURLYRIGHT ELSE CURLYLEFT program CURLYRIGHT

    LPAREN          shift and go to state 20


state 13

    (14) while_statement -> WHILE . LPAREN expression RPAREN CURLYLEFT program CURLYRIGHT

    LPAREN          shift and go to state 21


state 14

    (15) input_statement -> READ . LPAREN RPAREN SEMI_COLON

    LPAREN          shift and go to state 22


state 15

    (16) output_statement -> PRINT . LPAREN expression RPAREN SEMI_COLON

    LPAREN          shift and go to state 23


state 16

    (17) function_statement -> FUNCTION . ID LPAREN RPAREN CURLYLEFT statement RETURN expression SEMI_COLON CURLYRIGHT

    ID              shift and go to state 24


state 17

    (1) program -> statement program .

    $end            reduce using rule 1 (program -> statement program .)
    CURLYRIGHT      reduce using rule 1 (program -> statement program .)


state 18

    (10) var_declaration -> LET ID . OP_TYPE_ASSIGN type OP_VALUE_ASSIGN expression SEMI_COLON

    OP_TYPE_ASSIGN  shift and go to state 25


state 19

    (11) const_declaration -> CONST ID . OP_TYPE_ASSIGN type OP_VALUE_ASSIGN expression SEMI_COLON

    OP_TYPE_ASSIGN  shift and go to state 26


state 20

    (12) if_statement -> IF LPAREN . expression RPAREN CURLYLEFT program CURLYRIGHT
    (13) if_statement -> IF LPAREN . expression RPAREN CURLYLEFT program CURLYRIGHT ELSE CURLYLEFT program CURLYRIGHT
    (21) expression -> . simple_expression
    (22) expression -> . OP_MINUS simple_expression
    (23) expression -> . logic_expression
    (24) simple_expression -> . term OP_PLUS simple_expression
    (25) simple_expression -> . term OP_MINUS simple_expression
    (26) simple_expression -> . term
    (27) logic_expression -> . simple_expression logical_op simple_expression
    (28) logic_expression -> . OP_NOT logic_expression
    (29) term -> . factor OP_MULT term
    (30) term -> . factor OP_DIVIDE term
    (31) term -> . factor OP_MOD term
    (32) term -> . factor
    (33) factor -> . lit_value
    (34) factor -> . LPAREN expression RPAREN
    (35) factor -> . ID
    (44) lit_value -> . TRUE
    (45) lit_value -> . FALSE
    (46) lit_value -> . LIT_NUMBER
    (47) lit_value -> . LIT_STRING

    OP_MINUS        shift and go to state 30
    OP_NOT          shift and go to state 33
    LPAREN          shift and go to state 27
    ID              shift and go to state 36
    TRUE            shift and go to state 37
    FALSE           shift and go to state 38
    LIT_NUMBER      shift and go to state 39
    LIT_STRING      shift and go to state 40

    expression                     shift and go to state 28
    simple_expression              shift and go to state 29
    logic_expression               shift and go to state 31
    term                           shift and go to state 32
    factor                         shift and go to state 34
    lit_value                      shift and go to state 35

state 21

    (14) while_statement -> WHILE LPAREN . expression RPAREN CURLYLEFT program CURLYRIGHT
    (21) expression -> . simple_expression
    (22) expression -> . OP_MINUS simple_expression
    (23) expression -> . logic_expression
    (24) simple_expression -> . term OP_PLUS simple_expression
    (25) simple_expression -> . term OP_MINUS simple_expression
    (26) simple_expression -> . term
    (27) logic_expression -> . simple_expression logical_op simple_expression
    (28) logic_expression -> . OP_NOT logic_expression
    (29) term -> . factor OP_MULT term
    (30) term -> . factor OP_DIVIDE term
    (31) term -> . factor OP_MOD term
    (32) term -> . factor
    (33) factor -> . lit_value
    (34) factor -> . LPAREN expression RPAREN
    (35) factor -> . ID
    (44) lit_value -> . TRUE
    (45) lit_value -> . FALSE
    (46) lit_value -> . LIT_NUMBER
    (47) lit_value -> . LIT_STRING
